--- a/Backend/CapstoneBackend/src/main/resources/application.properties
+++ b/Backend/CapstoneBackend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=CapstoneBackend
-server.port=8080
+server.port=8085
 
 # Db related
 spring.datasource.url=jdbc:postgresql://localhost:5432/RecipeBook
 spring.datasource.username= postgres
 spring.datasource.password= 1028947aK!!!
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
